brushed up the html where q's/a's will display

--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
       </h1>
     </header>
     
+    <!--body for quiz questions-->
     <main class="body">
-        <article class="card">
+      <!--'quiz' portion of card body, relevant to js refs-->
+        <article class="quiz card">
             <div class="card-body">
-              <h2 class="card-title"></h2>
+              <!--Portion where questions and choices will be
+                  drawn from js arrays-->
+              <h2 class="questions card-title"></h2>
               <ul class="choices"></ul>
             </div>
         </article>
