added timer to html, respective const to main.js

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       <h1>
         <em> WebDev Quiz </em>
       </h1>
+
+      <section class="timer">Time: <span id="time"></span></section>
     </header>
     
     <!--body for quiz questions-->
