added start btn to index, main.js adjusted style

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                   drawn from js arrays-->
               <h2 class="questions card-title"></h2>
               <ul class="choices"></ul>
+              <button class="btn-primary" id="start">Start the Quiz</button>
             </div>
         </article>
       </main>
