--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="/favicon.ico" type="image/x-icon" rel="icon" />
 
     <!--normalize.css-->
     <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css"/>
